removed message component - created copyright container - moved soical media links there

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,6 @@ siteTitle="oRanger"
 siteDescription="With Pulp oRanger gatsby scaffold"
 siteUrl= "http://withpulp.com"
 siteVersion= "0.0.1"
-copyrightMessage= "<a href='http://withpulp.com' target='_blank'>With Pulp</a>. Code available on <a href='http://github.com' target='_blank'>GitHub</a>."
+copyrightMessage= "<a href='http://withpulp.com' target='_blank'>With Pulp</a>. Code available on <a href='https://github.com/withpulp/gatsby-oRanger' target='_blank'>GitHub</a>."
 linkPrefix= ""
 #gaCode= "UA-XXX-X"
