--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 siteTitle="oRanger"
-siteDescription="With Pulp oRanger gatsby scaffold"
+siteDescription="With Pulp Gatsby Scaffold"
 siteUrl= "http://withpulp.com"
 siteVersion= "0.0.1"
 copyrightMessage= "<a href='http://withpulp.com' target='_blank'>With Pulp</a>. Code available on <a href='https://github.com/withpulp/gatsby-oRanger' target='_blank'>GitHub</a>."
