--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 siteTitle="oRanger"
-siteDescription="With Pulp Gatsby Scaffold"
+siteDescription="Gatsby Scaffold"
 siteUrl= "http://withpulp.com"
-siteVersion= "0.0.1"
-copyrightMessage= "<a href='http://withpulp.com' target='_blank'>With Pulp</a>. Code available on <a href='https://github.com/withpulp/gatsby-oRanger' target='_blank'>GitHub</a>."
+siteVersion= "1.0.0"
+copyrightMessage= "<a href='http://withpulp.com' target='_blank'>With Pulp</a>. Code available on <a href='https://github.com/withpulp/gatsby-oRanger' target='_blank'>GitHub</a> under <a href='https://github.com/withpulp/gatsby-oRanger/blob/master/LICENSE' target='_blank'>MIT License</a>."
 linkPrefix= ""
 #gaCode= "UA-XXX-X"
