--- a/package.json
+++ b/package.json
@@ -1,77 +1,72 @@
 {
-  "name": "gatsby-oranger",
-  "description": "With Pulp oRanger gatsby scaffold",
-  "version": "1.0.0",
-  "main": "n/a",
-  "scripts": {
-    "build": "gatsby build",
-    "deploy": "gatsby build --prefix-links && gh-pages -d public",
-    "develop": "gatsby develop",
-    "lint": "./node_modules/.bin/eslint --ext .js,.jsx --ignore-pattern public .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "gatsby",
-    "react",
-    "book"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/withpulp/gatsby-oRanger.git"
-  },
-  "bugs": {
-    "url": "https://github.com/withpulp/gatsby-oRanger/issues"
-  },
-  "homepage": "http://withpulp.com",
-  "author": "With Pulp",
-  "license": "MIT",
+  "name": "gatsby-starter-advanced",
+  "description": "GatsbyJS starter that includes examples for advanced use cases.",
+  "version": "1.1.0",
+  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
   "dependencies": {
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
-    "catch-links": "^2.0.1",
-    "front-matter": "^2.0.7",
-    "gatsby": "^0.12.0",
-    "highlight.js": "^9.3.0",
-    "history": "^2.1.1",
-    "just-intersect": "^1.1.20",
-    "lodash": "^4.13.1",
-    "marked": "^0.3.5",
-    "moment": "^2.14.1",
-    "object-assign": "^4.1.0",
-    "raw-loader": "^0.5.1",
-    "react": "^15.3.0",
-    "react-document-title": "^2.0.1",
-    "react-dom": "^15.3.0",
-    "react-ga": "^2.1.1",
-    "react-headroom": "^2.1.2",
-    "react-router": "^2.6.1",
-    "react-typography": "^0.12.0",
-    "safe-access": "^0.1.0",
-    "slugify": "^0.1.1",
-    "typography": "^0.12.1",
-    "underscore.string": "^3.2.3",
-    "webpack-configurator": "^0.3.1"
+    "babel-plugin-lodash": "^3.2.11",
+    "gatsby": "^1.4.1",
+    "gatsby-link": "^1.4.1",
+    "gatsby-plugin-catch-links": "^1.0.1",
+    "gatsby-plugin-feed": "^1.3.1",
+    "gatsby-plugin-google-analytics": "^1.0.1",
+    "gatsby-plugin-manifest": "^1.0.1",
+    "gatsby-plugin-nprogress": "^1.0.1",
+    "gatsby-plugin-offline": "^1.0.1",
+    "gatsby-plugin-react-helmet": "^1.0.1",
+    "gatsby-plugin-sharp": "^1.4.1",
+    "gatsby-plugin-sitemap": "^1.2.0",
+    "gatsby-plugin-twitter": "^1.0.5",
+    "gatsby-remark-autolink-headers": "^1.4.1",
+    "gatsby-remark-copy-linked-files": "^1.4.1",
+    "gatsby-remark-images": "^1.3.2",
+    "gatsby-remark-prismjs": "^1.2.0",
+    "gatsby-remark-responsive-iframe": "^1.4.1",
+    "gatsby-source-filesystem": "^1.4.1",
+    "gatsby-transformer-remark": "^1.1.0",
+    "lodash": "^4.17.4",
+    "lodash-webpack-plugin": "^0.11.4",
+    "react": "^15.6.1",
+    "react-disqus-comments": "^1.0.3",
+    "react-dom": "^15.6.1",
+    "react-helmet": "^5.1.3",
+    "react-share": "^1.15.0",
+    "react-twitter-widgets": "^1.4.0"
   },
   "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-preset-react-hmre": "^1.1.1",
-    "css-loader": "^0.23.1",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb": "^10.0.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-jsx-a11y": "^2.0.1",
-    "eslint-plugin-react": "^6.0.0",
-    "gh-pages": "^0.11.0",
-    "image-webpack-loader": "^2.0.0",
-    "null-loader": "^0.1.1",
-    "postcss-loader": "^0.9.1",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.10",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.1"
+    "cli-glob": "^0.1.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.2",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.1.0",
+    "gh-pages": "^1.0.0",
+    "prettier": "^1.5.3",
+    "remark-cli": "^4.0.0",
+    "remark-preset-lint-recommended": "^3.0.0",
+    "stylefmt": "^6.0.0",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "write-good": "^0.11.3"
+  },
+  "keywords": ["gatsby"],
+  "license": "MIT",
+  "main": "n/a",
+  "scripts": {
+    "develop": "gatsby develop",
+    "dev": "npm run develop",
+    "serve": "gatsby serve",
+    "build": "gatsby build",
+    "build:pp": "gatsby build --prefix-paths",
+    "build:gh": "npm run clean && npm run build:pp && gh-pages -d public",
+    "clean": "rm -rf public",
+    "lint:js": "eslint --ext .js,.jsx --ignore-pattern public,static .",
+    "lint:md": "remark content/posts/",
+    "write-good": "write-good $(glob 'content/posts/**/*.md')",
+    "format:js": "prettier '**/*.{js,jsx}' --write"
+  },
+  "remarkConfig": {
+    "plugins": ["remark-preset-lint-recommended"]
   }
 }
